--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<script>
 
 		function preload() {
-		   mask = loadImage('FA_SOCIAL MEDIA_ProfilePicture-03.png');
+		   mask = loadImage('pic/twibbon.png');
 		}
 
 		function setup() {
